--- a/src/integrations/src/AXOpen.Integrations.Blazor/Shared/MainLayout.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Shared/MainLayout.razor
@@ -16,6 +16,6 @@
             @Body
         </article>
 
-        <AXOpen.Core.blazor.Toaster.Toaster />
+        <AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.Toaster />
     </main>
 </div>
