--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/Index.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/Index.razor
@@ -1,7 +1,29 @@
 ﻿@page "/"
+@using AXSharp.Abstractions.Dialogs.AlertDialog;
+@using AXSharp.Presentation.Blazor.Controls.Dialogs.ActionDialog
+@using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;
+@inject IDialogService DialogService
 
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+
+<button type="button" class="btn btn-primary" @onclick="CreateToast">Add Toast</button>
+
+
+@if (_dialogService != null )
+{
+    //<TcoDialogLocatorView DialogService="_dialogService" DialogId="AxoSequencerContainer"></TcoDialogLocatorView>
+}
+
+@code {
+    public void CreateToast()
+    {
+        DialogService.AddToast("Success", "Test", "test", 30);
+    }
+
+    public static DialogProxyServiceBlazor _dialogService { get; set; } = DialogProxyServiceBlazor.Create(new[] { Entry.Plc.AxoSequencerContainer });
+}
