Working on AlertDialogs

--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
@@ -1,5 +1,6 @@
 ﻿@namespace AXOpen.Data
 @using AXOpen.Data;
+@using AXSharp.Abstractions.Dialogs.AlertDialog;
 @using CommunityToolkit.Mvvm.ComponentModel;
 @using CommunityToolkit.Mvvm.Messaging;
 @using Microsoft.AspNetCore.Components.Forms;
