--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/Index.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/Index.razor
@@ -2,7 +2,7 @@
 @using AXSharp.Abstractions.Dialogs.AlertDialog;
 @using AXSharp.Presentation.Blazor.Controls.Dialogs.ActionDialog
 @using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;
-@inject IDialogService DialogService
+@inject IAlertDialogService DialogService
 
 <PageTitle>Index</PageTitle>
 
@@ -22,7 +22,7 @@ Welcome to your new app.
 @code {
     public void CreateToast()
     {
-        DialogService.AddToast("Success", "Test", "test", 30);
+        DialogService.AddAlertDialog("Success", "Test", "test", 30);
     }
 
     public static DialogProxyServiceBlazor _dialogService { get; set; } = DialogProxyServiceBlazor.Create(new[] { Entry.Plc.AxoSequencerContainer });
