--- a/src/core/src/AXOpen.Core.Blazor/Dialogs/AlertDialog/Toaster.razor
+++ b/src/core/src/AXOpen.Core.Blazor/Dialogs/AlertDialog/Toaster.razor
@@ -1,9 +1,9 @@
 ﻿@namespace AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog
 @using AXSharp.Abstractions.Dialogs.AlertDialog;
-@if (_dialogService.GetToasts() != null && _dialogService.GetToasts().Count > 0)
+@if (_dialogService.GetAlertDialogs() != null && _dialogService.GetAlertDialogs().Count > 0)
 {
     <div class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 100;">
-        @foreach (Toast toast in _dialogService.GetToasts())
+        @foreach (AlertDialog toast in _dialogService.GetAlertDialogs())
         {
             var bg = "";
             var icon = "";
@@ -32,19 +32,19 @@
                     <span class="@icon me-2" aria-hidden="true"></span>
                     <strong class="me-auto">@toast.Title</strong>
                     <small>@GetTime(toast.Posted)</small>
-                    @if (_dialogService.GetToasts().Count > 2)
+                    @if (_dialogService.GetAlertDialogs().Count > 2)
                     {
                         <div class="dropup">
                             <button type="button" class="btn-close" data-bs-toggle="dropdown" aria-expanded="false"></button>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" @onclick="() => _dialogService.RemoveAllToast()">Close all</a></li>
-                                <li><a class="dropdown-item" @onclick="() => _dialogService.RemoveToast(toast)">Close</a></li>
+                                <li><a class="dropdown-item" @onclick="() => _dialogService.RemoveAllAlertDialogs()">Close all</a></li>
+                                <li><a class="dropdown-item" @onclick="() => _dialogService.RemoveAlertDialog(toast)">Close</a></li>
                             </ul>
                         </div>
                     }
                     else
                     {
-                        <button type="button" class="btn-close" @onclick="() => _dialogService.RemoveToast(toast)"></button>
+                        <button type="button" class="btn-close" @onclick="() => _dialogService.RemoveAlertDialog(toast)"></button>
                     }
                 </div>
                 <div class="toast-body">
@@ -57,7 +57,7 @@
 
 @code {
     [Inject]
-    private IDialogService _dialogService { get; set; }
+    private IAlertDialogService _dialogService { get; set; }
 
     private string GetTime(DateTimeOffset time)
     {
