--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/FetchData.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/FetchData.razor
@@ -2,7 +2,7 @@
 @using AXSharp.Abstractions.Dialogs.AlertDialog;
 @using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;
 @using axopen_integrations_blazor.Data
-@inject IDialogService DialogService
+@inject IAlertDialogService DialogService
 @inject WeatherForecastService ForecastService
 
 <PageTitle>Weather forecast</PageTitle>
@@ -40,7 +40,7 @@ else
     </table>
 }
 
-<RenderableContentControl Context="@Entry.Plc.vmTest" Presentation="Service" DialogService="@DialogService" />
+<RenderableContentControl Context="@Entry.Plc.vmTest" Presentation="Service" AlertDialogService="@DialogService" />
 
 <button type="button" class="btn btn-primary" @onclick="CreateToast">Add Toast</button>
 
@@ -55,6 +55,6 @@ else
 
     public void CreateToast()
     {
-        DialogService.AddToast("Success", "Test", "test", 30);
+        DialogService.AddAlertDialog("Success", "Test", "test", 30);
     }
 }
