--- a/src/integrations/src/AXOpen.Integrations.Blazor/VMTestView/VMTestServiceView.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/VMTestView/VMTestServiceView.razor
@@ -22,7 +22,7 @@
 
     public void CreateToast()
     {
-        DialogService.AddToast("Success", "Test", "test", 30);
+        AlertDialogService.AddAlertDialog("Success", "Test", "test", 30);
         //_toastService.AddToast("Success", "Test", "test", 30);
     }
 
