--- a/src/templates.simple/axosimple.app/Shared/MainLayout.razor
+++ b/src/templates.simple/axosimple.app/Shared/MainLayout.razor
@@ -10,4 +10,6 @@
         </article>
     </main>
     <NavMenu />
+
+    <AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.Toaster />
 </div>
