--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/Index.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/Index.razor
@@ -1,7 +1,20 @@
 ﻿@page "/"
+@using AXSharp.Abstractions.Dialogs.AlertDialog;
+@using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;
+@inject IAlertDialogService DialogService
 
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+
+<button type="button" class="btn btn-primary" @onclick="CreateToast">Add Toast</button>
+
+@code {
+    public void CreateToast()
+    {
+        DialogService.AddAlertDialog("Success", "Test", "test", 30);
+    }
+}
