WIP AxoData Import/Export

--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Status/AxoDataExchangeBaseStatusView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Status/AxoDataExchangeBaseStatusView.razor
@@ -5,6 +5,6 @@
 
 @code
 {
-    private DataExchangeViewModel _vm => new DataExchangeViewModel { Model = this.Component };
+    private DataExchangeViewModel _vm => new DataExchangeViewModel { Model = this.Component, AlertDialogService = AlertDialogService };
 }
 
