--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
@@ -22,8 +22,8 @@ else
                 <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#createModal-@ViewGuid" @onclick='() => Create = "LoadFromPLC"'>Load from PLC</button>
                 @if (CanExport)
                 {
-                    <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#exportModal-@ViewGuid" @onclick="() => Vm.ExportData()">Export</button>
-                    <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#importModal-@ViewGuid">Import</button>
+                    <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#exportModal-@ViewGuid" @onclick='() => { Vm.IsFileExported = false; Vm.ExportData("wwwroot/" + ViewGuid + "/exportData.zip"); }'>Export</button>
+                    <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal" data-bs-target="#importModal-@ViewGuid" @onclick="() => isFileImported = false">Import</button>
                 }
             }
             <div class="btn-group ms-auto" role="group">
@@ -54,9 +54,9 @@ else
                     <th scope="col">DataEntityId</th>
 
                     <CascadingValue Value="this" IsFixed>
-                        @ChildContent
-                    </CascadingValue>
-                    @foreach (ColumnData column in Columns)
+                    @ChildContent
+                </CascadingValue>
+                @foreach (ColumnData column in Columns)
                     {
                         if (column.HeaderName is null || column.HeaderName == "")
                         {
@@ -236,164 +236,175 @@ else
         </div>
     }
 
-}
 
-<div class="modal fade" id="createModal-@ViewGuid" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-                @if (Create.Equals("Create"))
-                {
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Create new item</h1>
-                }
-                else if (Create.Equals("Copy"))
-                {
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Copy item</h1>
-                }
-                else if (Create.Equals("LoadFromPLC"))
-                {
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Load item from PLC</h1>
-                }
 
-                @if (Create.Equals("Copy"))
-                {
-                    <button type="button" class="btn-close" data-bs-toggle="modal" data-bs-target="#viewModal-@ViewGuid" aria-label="Close"></button>
-                }
-                else
-                {
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                }
-            </div>
-            <div class="modal-body">
-                <div class="mb-3">
-                    <label for="id" class="form-label">Id</label>
-                    <input type="text" class="form-control" id="id" @bind="Vm.CreateItemId">
+    <div class="modal fade" id="createModal-@ViewGuid" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    @if (Create.Equals("Create"))
+                    {
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Create new item</h1>
+                    }
+                    else if (Create.Equals("Copy"))
+                    {
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Copy item</h1>
+                    }
+                    else if (Create.Equals("LoadFromPLC"))
+                    {
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Load item from PLC</h1>
+                    }
+
+                    @if (Create.Equals("Copy"))
+                    {
+                        <button type="button" class="btn-close" data-bs-toggle="modal" data-bs-target="#viewModal-@ViewGuid" aria-label="Close"></button>
+                    }
+                    else
+                    {
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    }
                 </div>
-            </div>
-            <div class="modal-footer">
-                @if (Create.Equals("Copy"))
-                {
-                    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#viewModal-@ViewGuid">Close</button>
-                }
-                else
-                {
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                }
-
-                @if (Create.Equals("Create"))
-                {
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.CreateNew()">Create</button>
-                }
-                else if (Create.Equals("Copy"))
-                {
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.Copy()">Copy</button>
-                }
-                else if (Create.Equals("LoadFromPLC"))
-                {
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.LoadFromPlc()">Load from PLC</button>
-                }
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="viewModal-@ViewGuid" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">@Vm.SelectedRecord?.DataEntityId</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <RenderableContentControl Context="Vm.DataExchange.RefUIData" Presentation="ShadowDisplay"></RenderableContentControl>
-            </div>
-            <div class="modal-footer">
-                @if (Presentation.Equals("Command"))
-                {
-                    <button type="button" class="btn btn-danger me-auto" data-bs-toggle="modal" data-bs-target="#deleteModal-@ViewGuid">Delete</button>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal-@ViewGuid" @onclick='() => Create = "Copy"'>Copy</button>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editModal-@ViewGuid">Edit</button>
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.SendToPlc()">Send to PLC</button>
-                }
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="editModal-@ViewGuid" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">@Vm.SelectedRecord?.DataEntityId</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <RenderableContentControl Context="Vm.DataExchange.RefUIData" Presentation="ShadowControl"></RenderableContentControl>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.Edit()">Save</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="deleteModal-@ViewGuid" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete @Vm.SelectedRecord?.DataEntityId ?</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal" @onclick="() => Vm.Delete()">Delete</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="exportModal-@ViewGuid" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Export data</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <a download href="/exportData.zip">Download</a>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="importModal-@ViewGuid" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Import data</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="mb-3">
-                    <label for="formFile" class="form-label">File input</label>
-                    <InputFile class="form-control col-10" id="formFile" OnChange="@LoadFile" />
-                </div>
-            </div>
-            <div class="modal-footer">
-                @if (isLoadingFile)
-                {
-                    <div class="spinner-border" role="status">
-                        <span class="visually-hidden">Loading...</span>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="id" class="form-label">Id</label>
+                        <input type="text" class="form-control" id="id" @bind="Vm.CreateItemId">
                     </div>
-                }
-                <button type="button" class="btn btn-primary @(isLoadingFile || !isFileLoaded ? "disabled" : "")" data-bs-dismiss="modal" @onclick="() => { Vm.ImportData(); isFileLoaded = false; }">Import</button>
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+                <div class="modal-footer">
+                    @if (Create.Equals("Copy"))
+                    {
+                        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#viewModal-@ViewGuid">Close</button>
+                    }
+                    else
+                    {
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    }
+
+                    @if (Create.Equals("Create"))
+                    {
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.CreateNew()">Create</button>
+                    }
+                    else if (Create.Equals("Copy"))
+                    {
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.Copy()">Copy</button>
+                    }
+                    else if (Create.Equals("LoadFromPLC"))
+                    {
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.LoadFromPlc()">Load from PLC</button>
+                    }
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+    <div class="modal fade" id="viewModal-@ViewGuid" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">@Vm.SelectedRecord?.DataEntityId</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <RenderableContentControl Context="Vm.DataExchange.RefUIData" Presentation="ShadowDisplay"></RenderableContentControl>
+                </div>
+                <div class="modal-footer">
+                    @if (Presentation.Equals("Command"))
+                    {
+                        <button type="button" class="btn btn-danger me-auto" data-bs-toggle="modal" data-bs-target="#deleteModal-@ViewGuid">Delete</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#createModal-@ViewGuid" @onclick='() => Create = "Copy"'>Copy</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editModal-@ViewGuid">Edit</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.SendToPlc()">Send to PLC</button>
+                    }
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="editModal-@ViewGuid" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">@Vm.SelectedRecord?.DataEntityId</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <RenderableContentControl Context="Vm.DataExchange.RefUIData" Presentation="ShadowControl"></RenderableContentControl>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="() => Vm.Edit()">Save</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="deleteModal-@ViewGuid" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Delete @Vm.SelectedRecord?.DataEntityId ?</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal" @onclick="() => Vm.Delete()">Delete</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="exportModal-@ViewGuid" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Export data</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick='() => ClearFiles("wwwroot/" + ViewGuid)'></button>
+                </div>
+                <div class="modal-body">
+                    @if (!Vm.IsFileExported)
+                    {
+                        <div class="spinner-border" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    }
+                    else
+                    {
+                        <a download href="/@ViewGuid/exportData.zip">Download</a>
+                    }
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" @onclick='() => ClearFiles("wwwroot/" + ViewGuid)'>Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="importModal-@ViewGuid" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Import data</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="formFile" class="form-label">File input</label>
+                        <InputFile @key=@(_inputFileId) class="form-control col-10" id="formFile" OnChange="@LoadFile" />
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    @if (!isFileImported && isFileImporting)
+                    {
+                        <div class="spinner-border" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    }
+                    <button type="button" class="btn btn-primary @(!isFileImported || isFileImporting ? "disabled" : "")" data-bs-dismiss="modal" @onclick='() => { Vm.ImportData("wwwroot/" + ViewGuid + "/importData.zip"); isFileImported = false; _inputFileId = Guid.NewGuid().ToString(); }'>Import</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+}
