--- a/src/templates.simple/axosimple.app/_Imports.razor
+++ b/src/templates.simple/axosimple.app/_Imports.razor
@@ -10,3 +10,4 @@
 @using axosimple.hmi.Shared
 @using axosimple.hmi.Shared.Menu
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
+@using BlazorBootstrap
